@@ -15,6 +15,11 @@ PHP                                                                        NEWS
   . Fixed bug GH-12186 (segfault copying/cloning a finalized HashContext).
     (MaxSem)
 
+- Intl:
+  . Fixed bug GH-12243 (segfault on IntlDateFormatter::construct).
+    (David Carlier)
+
+
 - PCRE:
   . Fixed bug GH-11956 (Backport upstream fix, PCRE regular expressions with
     JIT enabled gives different result). (nielsdos)
